# imengine

./: .gitignore  CMakeLists.txt  README.md
clientsdk/: CMakeLists.txt
clientsdk/core/: CMakeLists.txt  mars
clientsdk/core/core/: CMakeLists.txt  api_message_box.h  auto_buffer_codec.cc  auto_buffer_codec.h  byte_stream.cc  byte_stream.h  checksum.cc  checksum.h  core_api.cc  core_api.h  core_longlink_packer.cc  core_longlink_packer.h  core_shortlink_packer.cc  core_shortlink_packer.h  crc.hpp  log_crypt.cc  mars_core_manager.cc  mars_core_manager.h  zproto_command_ids.h  zproto_frame_data.cc  zproto_frame_data.h  zproto_package_data.cc  zproto_package_data.h  zproto_task_manager.cc  zproto_task_manager.h
clientsdk/core/core/test/: CMakeLists.txt  core_test.cc
clientsdk/core/mars_test/: CMakeLists.txt  xlog_unittest.cc
conf/: frontend.json  gate_server.json  service.json  test_service.json  zrpc_client_test.json
doc/: config.txt  设计文档.md
server/: CMakeLists.txt
server/auth/: CMakeLists.txt  auth_service_impl.cc  auth_service_impl.h  zrpc_auth_dispatcher.cc  zrpc_auth_service.cc
server/base/: base_zrpc_service.cc  message_handler_util.h
server/biz_model/: CMakeLists.txt  auth_model.cc  auth_model.h  dialog_model.cc  dialog_model.h  group_model.cc  group_model.h  message_model.cc  message_model.h  model_manager.cc  model_manager.h  sequence_model.cc  sequence_model.h
server/client/: CMakeLists.txt  client.cc  client_command_handler.cc  client_handler.cc  client_handler.h
server/dal/: CMakeLists.txt  base_dal.h  file_dao.h  file_dao_impl.cc  file_dao_impl.h  file_do.h  file_part_dao.h  file_part_dao_impl.cc  file_part_dao_impl.h  file_part_do.h  group_dao.h  group_dao_impl.cc  group_dao_impl.h  group_do.h  group_invite_token_dao.h  group_invite_token_dao_impl.cc  group_invite_token_dao_impl.h  group_invite_token_do.h  group_user_dao.h  group_user_dao_impl.cc  group_user_dao_impl.h  group_user_do.h  history_message_dao.h  history_message_dao_impl.cc  history_message_dao_impl.h  history_message_do.h  online_status_dao.h  online_status_dao_impl.cc  online_status_dao_impl.h  online_status_do.h  seq_updates_ngen_dao.h  seq_updates_ngen_dao_impl.cc  seq_updates_ngen_dao_impl.h  seq_updates_ngen_do.h  sequence_dao.h  sequence_dao_impl.cc  sequence_dao_impl.h  sequence_do.h  user_dao.h  user_dao_impl.cc  (+14 more)
server/frontend/: CMakeLists.txt  frontend_server.cc  frontend_server.h  frontend_server_handler.cc  frontend_server_handler.h  gate_handler.cc  gate_handler.h  online_status_client_handler.h  push_channel_client_handler.cc  push_channel_client_handler.h  router_handler.h
server/gate/: CMakeLists.txt  auth_client_handler.cc  auth_client_handler.h  gate_base_handler.cc  gate_base_handler.h  gate_server.cc  gate_server.h  gate_server_handler.cc  gate_server_handler.h  gate_server_util.h  messenger_client_handler.cc  messenger_client_handler.h  online_status_client_handler.cc  router_handler.cc
server/mars/: README.md
server/messenger/: CMakeLists.txt  account_service_impl.cc  account_service_impl.h  auth_service_impl.cc  auth_service_impl.h  bots_service_impl.cc  bots_service_impl.h  channels_service_impl.cc  channels_service_impl.h  contacts_service_impl.cc  contacts_service_impl.h  dialog_service_impl.cc  dialog_service_impl.h  groups_service_impl.cc  groups_service_impl.h  help_service_impl.cc  help_service_impl.h  messages_service_impl.cc  messages_service_impl.h  messaging_service_impl.cc  messaging_service_impl.h  messenger_server.cc  messenger_server.h  payments_service_impl.cc  payments_service_impl.h  phone_service_impl.cc  phone_service_impl.h  photos_service_impl.cc  photos_service_impl.h  privacy_service_impl.cc  privacy_service_impl.h  sequence_service_impl.cc  sequence_service_impl.h  updates_service_impl.cc  updates_service_impl.h  upload_service_impl.cc  upload_service_impl.h  users_service_impl.cc  users_service_impl.h  weak_service_impl.cc  (+41 more)
server/online/: CMakeLists.txt  http_online_service.cc  http_online_service.h  online_service_impl.cc  online_service_impl.h  online_session_manager.cc  online_session_manager.h  online_status_server.cc  online_status_server.h  zrpc_online_dispatcher.cc  zrpc_online_dispatcher.h  zrpc_online_service.cc  zrpc_online_service.h
server/online/test/: CMakeLists.txt  online_session_manager_test.cc
server/platform/: CMakeLists.txt  platform_server.cc  platform_server.h  zrpc_platform_dispatcher.h  zrpc_platform_service.h
server/push/: CMakeLists.txt  gate_channel_handler.cc  gate_channel_handler.h  gate_channel_manager.cc  gate_channel_manager.h  push_server.cc  push_server.h  push_service_impl.cc  push_service_impl.h  zrpc_push_dispatcher.cc  zrpc_push_dispatcher.h  zrpc_push_service.cc  zrpc_push_service.h
sql/: nebula_engine.sql  nebula_platform.sql
src/: CMakeLists.txt
src/access/: CMakeLists.txt
src/access/auth_key/: CMakeLists.txt  auth_key_server.cc  auth_key_server.h  auth_key_service_impl.cc  auth_key_service_impl.h
src/access/frontend/: CMakeLists.txt  backend_client_handler.cc  backend_client_handler.h  frontend_server.cc  frontend_server.h  frontend_server_handler.cc  frontend_server_handler.h
src/base/: brpc_service_util.cc  brpc_service_util.h
src/mtproto/: CMakeLists.txt  schema.tl.h
src/mtproto/cc/: auth_key_service.pb.cc  auth_key_service.pb.h  nbfs_service.pb.cc  nbfs_service.pb.h  rpc_error_codes.pb.cc  rpc_error_codes.pb.h  schema.tl.core_types.pb.cc  schema.tl.core_types.pb.h  schema.tl.crc32.pb.cc  schema.tl.crc32.pb.h  schema.tl.handshake.pb.cc  schema.tl.handshake.pb.h  schema.tl.handshake_service.pb.cc  schema.tl.handshake_service.pb.h  schema.tl.sync_service.pb.cc  schema.tl.sync_service.pb.h  schema.tl.transport.pb.cc  schema.tl.transport.pb.h  schema.tl.transport_service.pb.cc  schema.tl.transport_service.pb.h  service.tl.pb.cc  service.tl.pb.h
src/mtproto/core/: parsed_maually_types.cc  parsed_maually_types.h  tl_codec_util.cc  tl_codec_util.h  tl_error.h  tl_null.h  tl_object.cc  tl_object.h  tl_vector.cc  tl_vector.h
src/relay/: CMakeLists.txt  test_service.json
(+50 files in other folders)
